deploy: dependencies & procfile

--- a/.tmp.env
+++ b/.tmp.env
@@ -1,7 +1,15 @@
+# APP CONFIGURATION
 # DEBUG=True
 SECRET_KEY=
 ALLOWED_HOST1=
 ALLOWED_HOST2=
-# DATABASE_URL=
-TIME_ZONE=UTC
+TIME_ZONE=Asia/Almaty
 DJANGO_CRON_DELETE_LOGS_OLDER_THAN=7
+
+# DATABASE CONFIGURATION
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
